<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_label_advertise"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertise_device"
        android:layout_marginTop="48dp" />

    <androidx.appcompat.widget.SwitchCompat
        app:layout_constraintTop_toBottomOf="@+id/txt_label_advertise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/switch_advertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="80dp"
        />

    <TextView
        android:id="@+id/txt_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_advertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_color"
        android:layout_marginTop="56dp" />

    <RadioGroup
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_label"
        android:id="@+id/switch_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/color_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/color_option_1"
            android:checked="true" />

        <RadioButton
            android:id="@+id/color_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/color_option_2" />

    </RadioGroup>


    <Button
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_color"
        android:id="@+id/btn_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/notify"
        android:layout_marginTop="48dp"
        android:background="#BDBDBD"
        android:padding="8dp"
        android:elevation="4dp" />

    <ProgressBar
        android:id="@+id/layout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>